setup game file and allow multi-word object